# RepoSmart

./: LICENSE  README-VI.md  README.md  package.json  pnpm-lock.yaml
.github/: FUNDING.yml
.github/workflows/: release.yml
src/: AddRepoModal.tsx  App.css  App.tsx  BranchModal.tsx  CommitPushModal.tsx  GitGraph.tsx  SettingsModal.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: git_ops.rs  lib.rs  main.rs
